--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-flag-kit": "^0.2.3",
+    "react-ga": "^2.5.6",
     "react-scripts": "1.1.5"
   },
   "scripts": {
