--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "massive": "^5.5.0",
+    "querystring": "^0.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-flag-kit": "^0.2.3",
