--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-flag-kit": "^0.2.3",
-    "react-scripts": "1.1.5"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
